# rust-os

./: Cargo.toml  README.md  objdump.txt  riscv64gc-unknown-none-elf.json  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/arch/riscv/: boot.S  linker.ld  mmu.S  mod.rs  trap.S
kernel/src/interrupt/: mod.rs
kernel/src/mm/: mod.rs  page_table.rs
notes/: 01基本知识.md
notes/Chinese/: 01基本知识.md  02Println.md  03Test.md
notes/English/: 01BasicKnowledge.md  02Prntln.md  03Test.md
src/: allocator.rs  bio.rs  console.rs  elf.rs  file.rs  fs.rs  gdt.rs  interrupts.rs  kalloc.rs  lang_items.rs  lib.rs  log.rs  main.rs  memlayout.rs  memory.rs  param.rs  pipe.rs  plic.rs  println.rs  proc.rs  riscv.rs  riscv_local.rs  sbi.rs  serial.rs  sleeplock.rs  spinlock.rs  start.rs  stat.rs  string.rs  syscall.rs  test.rs  test_device.rs  trap.rs  types.rs  uart.rs  vga_buffer.rs  virtio.rs  vm.rs
src/arch/riscv/: boot.S  kernelvec.S  linker.ld  macro.S  swtch.S  trampoline.S  trap.S
src/task/: mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs
