[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.5.2"
bootloader = "0.9"
volatile = "0.2.6"

[build-dependencies]

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]