[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.5.2"
bootloader = "0.9"
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[build-dependencies]

[features]
default = []

[profile.dev]
debug = true

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-timeout = 30
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio","-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false